<resources>
    <string name="app_name" translatable="false">测试教师</string>
    <string name="studentid" translatable="false">手机/邮箱/账号</string>
    <string name="password" translatable="false">密码</string>
    <string name="forgetpassword" translatable="false">忘记密码</string>
    <string name="forgetpasswords" translatable="false">点击找回</string>
    <string name="login" translatable="false">登录</string>
    <string name="foundpassword" translatable="false">手机号找回密码</string>
    <string name="sendword" translatable="false">获取验证码</string>
    <string name="emailpassword" translatable="false">邮箱找回密码</string>
    <string name="sendlink" translatable="false">发送链接</string>
    <string name="requred" translatable="false">确定</string>
    <string name="alter" translatable="false">修改密码</string>
    <string name="firstalter" translatable="false">账号与安全</string>
    <string name="hintjiu" translatable="false">请输入密码</string>
    <string name="warning" translatable="false">警报提醒</string>
    <string name="liti" translatable="false">立即体验</string>
    <string name="fistpage" translatable="false">首页</string>
    <string name="fistlist" translatable="false">课程列表</string>
    <string name="instruction" translatable="false">点名方式说明</string>
    <string name="numbercall" translatable="false">数字验证点名</string>
    <string name="newpassword" translatable="false">新密码</string>
    <string name="inputpassword" translatable="false">请再输入一次</string>
    <string name="yaoqiu" translatable="false">6-16位数字或字母</string>
    <string name="done" translatable="false">完成</string>
    <string name="doned" translatable="false">立刻更新</string>
    <string name="nextmove" translatable="false">下一步</string>
    <string name="donelogin" translatable="false">完成并登录</string>
    <string name="today" translatable="false">Today</string>
    <string name="blindphone" translatable="false">绑定手机</string>
    <string name="callset" translatable="false">点名设置</string>
    <string name="helpcenter" translatable="false">帮助中心</string>
    <string name="qingchuhuan" translatable="false">清除缓存</string>
    <string name="guanyuzhixin" translatable="false">关于知新教师</string>
    <string name="blindemail" translatable="false">绑定邮箱</string>
    <string name="outlogin" translatable="false">退出登录</string>
    <string name="zhouyi" translatable="false">周一</string>
    <string name="zhouer" translatable="false">周二</string>
    <string name="zhousan" translatable="false">周三</string>
    <string name="zhousi" translatable="false">周四</string>
    <string name="zhouwu" translatable="false">周五</string>
    <string name="zhouliu" translatable="false">周六</string>
    <string name="zhouri" translatable="false">周日</string>
    <string name="shouye" translatable="false">首页</string>
    <string name="kebiao" translatable="false">课表</string>
    <string name="contac" translatable="false">联系人</string>
    <string name="information" translatable="false">消息</string>
    <string name="mine" translatable="false">我的</string>
    <string name="qiandaotai" translatable="false">签到状态:</string>
    <string name="woping" translatable="false">我的评价</string>
    <string name="tijiao" translatable="false">提交</string>
    <string name="oldpassword" translatable="false">旧密码</string>
    <string name="setting" translatable="false">设置</string>
    <string name="absenteeism" translatable="false">旷课</string>
    <string name="faxianzui" translatable="false">发现最新版本</string>
    <string name="shouzhao" translatable="false">手机号找回密码</string>
    <string name="shuyanma" translatable="false">请输入验证码</string>
    <string name="belate" translatable="false">迟到</string>
    <string name="yitij" translatable="false">已提交</string>
    <string name="weitij" translatable="false">未提交</string>
    <string name="leaveearly" translatable="false">早退</string>
    <string name="leave" translatable="false">请假</string>
    <string name="benzhou" translatable="false">第一周</string>
    <string name="inputphone" translatable="false">输入手机号码</string>
    <string name="studentevaluate" translatable="false">学生评价</string>
    <string name="dianming" translatable="false">点名</string>
    <string name="testnumber" translatable="false">验证数字:</string>
    <string name="pingjiao" translatable="false">评教统计(</string>
    <string name="pingjiaos" translatable="false">评教(</string>
    <string name="date" translatable="false">日</string>
    <string name="dated" translatable="false">期:</string>
    <string name="jienum" translatable="false">节</string>
    <string name="jienumd" translatable="false">节数:</string>
    <string name="jienums" translatable="false">数:</string>
    <string name="time" translatable="false">时</string>
    <string name="timed" translatable="false">时间:</string>
    <string name="times" translatable="false">间:</string>
    <string name="location" translatable="false">地</string>
    <string name="locationd" translatable="false">地点:</string>
    <string name="locations" translatable="false">点:</string>
    <string name="later" translatable="false">迟到时间:</string>
    <string name="laters" translatable="false">迟到时间:</string>
    <string name="out" translatable="false">学生出勤率</string>
    <string name="dianrule" translatable="false">点名规则</string>
    <string name="sett" translatable="false">设置</string>
    <string name="woshi" translatable="false">我是辅导员</string>
    <string name="dianrules" translatable="false">点名规则</string>
    <string name="woshenp" translatable="false">我的请假审批</string>
    <string name="pingnum" translatable="false">我的课程评分</string>
    <string name="daochu" translatable="false">学生考勤报表</string>
    <string name="dione" translatable="false">第1周(本周)</string>
    <string name="erzhou" translatable="false">第2周</string>
    <string name="sanzhou" translatable="false">第3周</string>
    <string name="sizhou" translatable="false">第4周</string>
    <string name="wuzhou" translatable="false">第5周</string>
    <string name="disix" translatable="false">第6周</string>
    <string name="paizhao" translatable="false">拍照</string>
    <string name="congxiang" translatable="false">从相册中选取</string>
    <string name="quxiao" translatable="false">取消</string>
    <string name="quxiaos" translatable="false">稍后再说</string>
    <string name="pingju" translatable="false">平均分:</string>
    <string name="wupingfen" translatable="false">还没有课程评分哦!</string>
    <string name="wuxinxi" translatable="false">还没有出勤信息哦!</string>
    <string translatable="false" name="send">获取验证码</string>
    <string name="hintshou" translatable="false">请输入手机号</string>
    <string name="hintshous" translatable="false">手机号</string>
    <string name="hintyan" translatable="false">请输入验证码</string>
    <string name="hintyans" translatable="false">手机验证码</string>
    <string name="fancuo" translatable="false">返回数据错误</string>
    <string name="facuo" translatable="false">发送数据错误</string>
    <string name="labu" translatable="false">连不上服务器</string>
    <string name="meiju" translatable="false">没有数据了啊!</string>
    <string name="zaichu" translatable="false">再按一下,退出应用</string>
    <string name="chongfa" translatable="false">重新发送</string>
    <string name="bangkong" translatable="false">绑定成功</string>
    <string name="bangbai" translatable="false">绑定失败</string>
    <string name="yankong" translatable="false">验证码不能为空</string>
    <string name="shoukong" translatable="false">手机号不能为空</string>
    <string name="mikong" translatable="false">密码不能为空</string>
    <string name="fagong" translatable="false">发送成功</string>
    <string name="fanbai" translatable="false">发送失败</string>
    <string name="jianwang" translatable="false">请检查网络</string>
    <string name="di" translatable="false">第</string>
    <string name="zhou" translatable="false">周</string>
    <string name="zhouyiyi" translatable="false">周一</string>
    <string name="zhouerer" translatable="false">周二</string>
    <string name="zhousansan" translatable="false">周三</string>
    <string name="zhousisi" translatable="false">周四</string>
    <string name="zhouwuwu" translatable="false">周五</string>
    <string name="zhouliuliu" translatable="false">周六</string>
    <string name="zhouriri" translatable="false">周日</string>
    <string name="yi" translatable="false">一</string>
    <string name="er" translatable="false">二</string>
    <string name="san" translatable="false">三</string>
    <string name="si" translatable="false">四</string>
    <string name="wu" translatable="false">五</string>
    <string name="liu" translatable="false">六</string>
    <string name="ri" translatable="false">日</string>
    <string name="fen" translatable="false">分</string>
    <string name="xiqing" translatable="false">星期</string>
    <string name="xinmi" translatable="false">新密码不能为空</string>
    <string name="zaixinmi" translatable="false">再输入密码不能为空</string>
    <string name="xiugong" translatable="false">修改成功</string>
    <string name="shubuyi" translatable="false">输入密码不一致</string>
    <string name="ren" translatable="false">人</string>
    <string name="wupingjiaobiao" translatable="false">没有评教数据了啊!</string>
    <string name="tupian" translatable="false">图片错误</string>
    <string name="shanggong" translatable="false">上传成功</string>
    <string name="wuke" translatable="false">今天没有课哦</string>
    <string name="shaixuan" translatable="false">筛选</string>
    <string name="qued" translatable="false">确定</string>
    <string name="xuanbj" translatable="false">选择班级</string>
    <string name="xuansj" translatable="false">选择时间</string>
    <string name="qububj" translatable="false">全部班级</string>
    <string name="weizhi" translatable="false">位置</string>
    <string name="evadetail" translatable="false">评价详情</string>
    <string name="cunchu" translatable="false">存储</string>
    <string name="quekai" translatable="false">确定开启点名</string>
    <string name="guandian" translatable="false">关闭自动点名</string>
    <string name="kaiqian" translatable="false">开启签到</string>
    <string name="allclass" translatable="false">全部班级</string>
    <string name="choceclass" translatable="false">选择班级</string>
    <string name="zaishangke" translatable="false">在这里上课</string>
    <string name="qingjiashenqing" translatable="false">我的请假审批</string>
    <string name="qingjiatongzhi" translatable="false">请假通知</string>
    <string name="jingaotix" translatable="false">警报提醒</string>
    <string name="weidone" translatable="false">未处理</string>
    <string name="yidone" translatable="false">已处理</string>
    <string name="yiback" translatable="false">已撤回</string>
    <string name="qingjiatime" translatable="false">请假时间:</string>
    <string name="qingjiayuanyi" translatable="false">请假原因:</string>
    <string name="shifoulixiao" translatable="false">是否离校:</string>
    <string name="tongyi" translatable="false">同意</string>
    <string name="jujue" translatable="false">拒绝</string>
    <string name="jujueyuanyi" translatable="false">拒绝原因:</string>
    <string name="shenpiren" translatable="false">审批人:</string>
    <string name="shenpi" translatable="false">请假审批</string>
    <string name="shenpitongzhi" translatable="false">请假通知</string>
    <string name="refuse" translatable="false">拒绝</string>
    <string name="qintongyi" translatable="false">确认同意请假申请</string>
    <string name="qingrefuse" translatable="false">请输入拒绝理由...</string>
    <string name="keset" translatable="false">设置课程:</string>
    <string name="dianset" translatable="false">点名方式:</string>
    <string name="shangke" translatable="false">上课</string>
    <string name="fenhou" translatable="false">分钟之后</string>
    <string name="save" translatable="false">保存</string>
    <string name="name" translatable="false">姓名</string>
    <string name="kaoqing" translatable="false">考勤状态</string>
    <string name="beizhu" translatable="false">备注</string>
    <string name="yidaos" translatable="false">已到</string>
    <string name="weijijiao" translatable="false">未提交</string>
    <string name="yichang" translatable="false">异常考勤</string>
    <string name="quanbu" translatable="false">全部</string>
</resources>