<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_Black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:orientation="vertical"
        android:background="@color/bg_White">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/recquanbu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quanbu"
                android:background="@mipmap/icon_z"
                android:gravity="center"
                android:textColor="@color/qiangzi"/>
            <TextView
                android:id="@+id/recchidao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belate"
                android:background="@mipmap/icon_weiz"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:textColor="@color/qiangzi"/>
            <TextView
                android:id="@+id/reczaotui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaveearly"
                android:background="@mipmap/icon_weiz"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:textColor="@color/qiangzi"/>
            <TextView
                android:id="@+id/reckuangke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absenteeism"
                android:background="@mipmap/icon_weiz"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:textColor="@color/qiangzi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/recqingjia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:background="@mipmap/icon_weiz"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/qiangzi"/>
        <TextView
            android:id="@+id/recyidao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yidaos"
            android:background="@mipmap/icon_weiz"
            android:gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/qiangzi"/>
        <TextView
            android:id="@+id/recweiyijiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weijijiao"
            android:background="@mipmap/icon_weiz"
            android:gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/qiangzi"/>
        <TextView
            android:id="@+id/recyichang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yichang"
            android:background="@mipmap/icon_weiz"
            android:gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/qiangzi"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/tvshengyu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_Black"
        />
</LinearLayout>