<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forget">
    <LinearLayout
        android:id="@+id/forgertnavigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/qianblue">
        <ImageView
            android:id="@+id/findpdback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@mipmap/backwhites"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:textSize="20sp"
            android:textColor="@color/bg_White"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llphone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bg_White"
        >
        <EditText
            android:id="@+id/etphone"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/shouzhao"
            style="@style/EditTextWithIcon"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:background="@color/bg_White"
            >
        <TextView
            android:id="@+id/tvsendword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@color/qianblue"
            android:textColor="@color/bg_White"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginRight="10dp"
            />
        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/codeet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_corner"
        android:hint="@string/shuyanma"
        style="@style/EditTextWithIcon"/>
    <Button
        android:id="@+id/donerequiref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextmove"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:background="@color/qianblue"
        android:textColor="@color/bg_White"
        />
</LinearLayout>