<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:id="@+id/rela">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/tvkuds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absenteeism"
            android:background="@drawable/circle_kuangkes"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/bg_White"
            android:layout_weight="1"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    <TextView
        android:id="@+id/tvlaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belate"
        android:background="@drawable/circle_chidao"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/bg_White"
        android:layout_weight="1"
        android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    <TextView
        android:id="@+id/tvearly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaveearly"
        android:background="@drawable/circle_zaotui"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/bg_White"
        android:layout_weight="1"
        android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    <TextView
        android:id="@+id/tvleav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave"
        android:background="@drawable/circle_qingjia"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/bg_White"
        android:layout_weight="1"
        android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/tvyidao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yidaos"
            android:background="@drawable/circle_yidao"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/bg_White"
            android:layout_weight="1"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>
</RelativeLayout>