<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@color/bg_White">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/quxiaod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quxiao"
                android:textColor="@color/qianblue"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/tvxuanshi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/xuansj"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/chuqun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cunchu"
                android:textColor="@color/qianblue"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
        <com.dingli.diandiaan.view.WheelView
            android:id="@+id/wheelview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</RelativeLayout>