<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_White"
    >
    <RelativeLayout
        android:id="@+id/rlrend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
        <TextView
            android:id="@+id/bantvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setlo"
            android:ellipsize="end"
            android:maxLines="1"
            android:drawableLeft="@mipmap/roll_ren"
            android:textSize="23sp"
            android:drawablePadding="16dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:id="@+id/tvrens"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/kchuqs"
            android:textSize="23sp"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ren"
                android:textColor="@color/setlo"
                android:textSize="23sp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/newro"/>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="34dp"
       android:background="@color/kebsd"
       android:gravity="center_vertical">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/name"
           android:layout_marginLeft="36dp"
           android:textColor="@color/xiangqin"
           android:textSize="18sp"
          />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/kaoqing"
           android:textColor="@color/xiangqin"
           android:layout_marginLeft="116dp"
           android:textSize="18sp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/beizhu"
           android:textColor="@color/xiangqin"
           android:layout_marginRight="56dp"
           android:layout_alignParentRight="true"
           android:textSize="18sp"
           />
   </RelativeLayout>
  <com.dingli.diandiaan.rollcall.NoScrollListView
      android:id="@+id/lvs"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:divider="@color/bg_White"
       android:background="@color/bg_White"
    />
</LinearLayout>