<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
         android:background="@color/qianblue">
        <ImageView
            android:id="@+id/callsetback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@mipmap/backwhites"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/callset"
            android:textSize="20sp"
            android:textColor="@color/bg_White"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/circle_corner"
        android:layout_marginTop="24dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:paddingTop="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:background="@color/bg_White"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_kec"
            android:layout_marginLeft="14dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keset"
            android:textColor="@color/setxiu"
            android:layout_marginLeft="6dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/savekechen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wenzis"
            android:layout_marginLeft="22dp"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llfangshis"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_fangs"
            android:layout_marginLeft="14dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dianset"
            android:textColor="@color/setxiu"
            android:layout_marginLeft="6dp"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tvfangshi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/wenzis"
            android:text="定位点名"
            android:layout_marginLeft="22dp"
           />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/youjian"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_chi"
            android:layout_marginLeft="14dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laters"
            android:textColor="@color/setxiu"
            android:layout_marginLeft="6dp"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shangke"
            android:textColor="@color/wenzis"
            android:layout_marginLeft="22dp" />
        <TextView
            android:id="@+id/etshuzi"
            android:layout_width="72dp"
            android:layout_height="28dp"
            android:text="15"
            android:textSize="15dp"
            android:textColor="@color/wenzis"
            android:background="@drawable/circle_cornerselect"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fenhou"
            android:textColor="@color/one_liuyan"/>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btsave"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/save"
        android:background="@drawable/code_click"
        android:textColor="@color/bg_White"
        android:textSize="17sp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"/>
    </LinearLayout>
    <View
        android:id="@+id/viheiping"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_Black"
        android:layout_marginBottom="232dp"
        android:visibility="gone"/>
</RelativeLayout>